--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb"
+      "plugin:vue/essential"
     ],
     "rules": {},
     "parserOptions": {
